syntax = "proto3";

option go_package = "/subscription_manager;pb_subscription_manager";

service SubscriptionManager {
  rpc GetContentSubscribers (GetContentSubscribersRequest) returns (GetContentSubscribersResponse);
}

message GetContentSubscribersRequest {
  int32 publication_id = 1;
}

message GetContentSubscribersResponse {
  repeated int32 subscriber_ids = 1;
}